--- a/libs/dbus_util/CMakeLists.txt
+++ b/libs/dbus_util/CMakeLists.txt
@@ -18,6 +18,7 @@ target_link_libraries(dbus_util
   PUBLIC
     unofficial::sdbusplus
     magic_enum::magic_enum
+    tfc::stx
     tfc::configure_options
 )
 
