* add boost sml for operation mode * add file storage

--- a/exes/operation-mode/CMakeLists.txt
+++ b/exes/operation-mode/CMakeLists.txt
@@ -4,11 +4,14 @@ cmake_minimum_required(VERSION 3.21)
 add_executable(operation-mode
   src/main.cpp
   src/app_operation_mode.cpp
+  src/state_machine.cpp
 )
 
+find_path(BEXT_SML_INCLUDE_DIRS "boost/sml.hpp")
 target_include_directories(operation-mode
   PUBLIC
     inc
+    ${BEXT_SML_INCLUDE_DIRS}
 )
 
 find_package(Boost REQUIRED)
@@ -17,7 +20,10 @@ target_link_libraries(operation-mode
   PUBLIC
     tfc::base
     tfc::logger
+    tfc::stx
+    tfc::ipc_connector
     tfc::operation_mode
+    tfc::confman
     Boost::boost
     unofficial::sdbusplus
 )
