--- a/libs/confman/CMakeLists.txt
+++ b/libs/confman/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required(VERSION 3.21)
 find_package(glaze CONFIG REQUIRED)
 find_path(AZMQ_INCLUDE_DIRS "azmq/actor.hpp")
 find_package(fmt CONFIG REQUIRED)
+find_package(Boost REQUIRED COMPONENTS )
 
 add_library(libconfman
   src/confman.cpp
@@ -27,6 +28,7 @@ target_link_libraries(libconfman
     tfc::rpc
     tfc::ipc
     tfc::stx
+    Boost::boost
 )
 add_library_to_docs(tfc::confman)
 
