--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_subdirectory(dbus_utils)
+add_subdirectory(configure_options)
+add_subdirectory(dbus_util)
 add_subdirectory(stx)
 add_subdirectory(logger)
 add_subdirectory(progbase)
@@ -7,6 +8,7 @@ add_subdirectory(ipc)
 add_subdirectory(ipc_connector)
 add_subdirectory(rpc)
 add_subdirectory(ec)
+add_subdirectory(operation_mode)
 
 add_library(tfc INTERFACE)
 add_library(tfc::tfc ALIAS tfc)
