--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,10 +46,14 @@ add_custom_target(
   ${ALL_SOURCE_FILES}
 )
 
-
 # from https://stackoverflow.com/questions/18968979/how-to-make-colorized-message-with-cmake
 string(ASCII 27 Esc)
 set(ColourReset "${Esc}[m")
 set(Red         "${Esc}[31m")
 set(Green       "${Esc}[32m")
 message("${Green}Using ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION} for ${CMAKE_SYSTEM_PROCESSOR}${ColourReset}")
+
+feature_summary(
+  DESCRIPTION "A summary of TFC options"
+  WHAT ALL
+)
