still rewriting confman

--- a/libs/confman/CMakeLists.txt
+++ b/libs/confman/CMakeLists.txt
@@ -5,9 +5,11 @@ find_package(glaze CONFIG REQUIRED)
 find_path(AZMQ_INCLUDE_DIRS "azmq/actor.hpp")
 find_package(fmt CONFIG REQUIRED)
 find_package(Boost REQUIRED COMPONENTS )
+find_package(unofficial-sdbusplus CONFIG REQUIRED)
 
 add_library(libconfman
   src/confman.cpp
+  src/detail/config_dbus_client.cpp
 )
 add_library(tfc::confman ALIAS libconfman)
 
@@ -20,15 +22,19 @@ target_include_directories(libconfman
     inc
 )
 
+
 target_link_libraries(libconfman
   PUBLIC
+    Boost::boost
     fmt::fmt
     glaze::glaze
     tfc::base
     tfc::rpc
     tfc::ipc
     tfc::stx
-    Boost::boost
+    tfc::dbus_util
+  PRIVATE
+    unofficial::sdbusplus
 )
 add_library_to_docs(tfc::confman)
 
