--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  CONFIGURATION_DIRECTORY: ${{ github.workspace }}
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
