Revert "testing pipeline"
This reverts commit 5e0f65138c6cbdf8d50e7a70bf525a5ee8eb87b1.

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -50,11 +50,7 @@ jobs:
           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
           configurePreset: 'ci-${{ matrix.compiler }}-${{matrix.build_type}}'
           buildPreset: 'build-ci-${{ matrix.compiler }}-${{matrix.build_type}}'
-#          testPreset: 'test-ci-${{ matrix.compiler }}-${{matrix.build_type}}'
-
-      - name: test
-        run: |
-          sudo ctest --preset test-ci-clang-debug
+          testPreset: 'test-ci-${{ matrix.compiler }}-${{matrix.build_type}}'
 
 #      - name: Run static analysis
 #        uses: JacobDomagala/StaticAnalysis@master
