working on making remote settable config for integration tests

--- a/libs/confman/CMakeLists.txt
+++ b/libs/confman/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(unofficial-sdbusplus CONFIG REQUIRED)
 
 add_library(libconfman
   src/confman.cpp
+  src/remote_change.cpp
   src/detail/config_dbus_client.cpp
 )
 add_library(tfc::confman ALIAS libconfman)
