install lib wip

--- a/libs/stx/CMakeLists.txt
+++ b/libs/stx/CMakeLists.txt
@@ -11,20 +11,38 @@ target_include_directories(stx
 )
 
 include(GNUInstallDirs)
-message(WARNING "Installing to directory ${CMAKE_INSTALL_LIBDIR}")
+include(CMakePackageConfigHelpers)
 
-install(
-  TARGETS
-    stx
-  DESTINATION
-    ${CMAKE_INSTALL_LIBDIR}
-  CONFIGURATIONS Release
+write_basic_package_version_file(
+  "${PROJECT_BINARY_DIR}/mylibConfigVersion.cmake"
+  VERSION 0.0.1
+  COMPATIBILITY SameMajorVersion
 )
 
+install(TARGETS stx
+  EXPORT mylibTargets
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Runtime
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
+  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT Development
+  BUNDLE DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
+)
+
+configure_package_config_file(
+    "${PROJECT_SOURCE_DIR}/mylibConfig.cmake.in"
+    "${PROJECT_BINARY_DIR}/mylibConfig.cmake"
+    INSTALL_DESTINATION lib/cmake/mylib
+)
+
+install(EXPORT mylibTargets DESTINATION lib/cmake/mylib)
+install(FILES "${PROJECT_BINARY_DIR}/mylibConfigVersion.cmake"
+    "${PROJECT_BINARY_DIR}/mylibConfig.cmake"
+    DESTINATION lib/cmake/mylib)
+install(DIRECTORY ${PROJECT_SOURCE_DIR}/inc/public/ DESTINATION include)
+
 install(
-  TARGETS
-    stx
-  DESTINATION
-    ${CMAKE_INSTALL_LIBDIR}/debug/
-  CONFIGURATIONS Debug
+  EXPORT mylibTargets
+  NAMESPACE tfc::
+  DESTINATION lib/cmake/mylib
+  COMPONENT Development
 )
