--- a/libs/dbus_util/CMakeLists.txt
+++ b/libs/dbus_util/CMakeLists.txt
@@ -22,7 +22,9 @@ target_link_libraries(dbus_util
 
 add_library_to_docs(tfc::dbus_util)
 
-add_subdirectory(tests)
+if (BUILD_TESTING)
+  add_subdirectory(tests)
+endif ()
 
 include(tfc_install)
 tfc_install_lib(dbus_util)
