--- a/libs/stx/CMakeLists.txt
+++ b/libs/stx/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(tfc::stx ALIAS stx)
 target_include_directories(stx
   INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
-    $<INSTALL_INTERFACE:inc/public>
+    $<INSTALL_INTERFACE:include>
 )
 
 include(tfc_install)
