--- a/libs/tfcConfig.cmake.in
+++ b/libs/tfcConfig.cmake.in
@@ -4,5 +4,6 @@ find_package(fmt CONFIG REQUIRED)
 find_package(Boost REQUIRED COMPONENTS program_options)
 find_package(unofficial-sdbusplus CONFIG REQUIRED)
 find_package(magic_enum CONFIG REQUIRED)
+find_package(spdlog CONFIG REQUIRED)
 
 include("${CMAKE_CURRENT_LIST_DIR}/@tfc_PACKAGE_NAME@Targets.cmake")
