--- a/libs/ipc/CMakeLists.txt
+++ b/libs/ipc/CMakeLists.txt
@@ -30,7 +30,7 @@ target_link_libraries(ipc
     fmt::fmt
     glaze::glaze
   PRIVATE
-    ${ZeroMQ_LIBRARY}
+    $<IF:$<BOOL:${ZeroMQ_LIBRARY}>,${ZeroMQ_LIBRARY},${ZeroMQ_STATIC_LIBRARY}>
 )
 
 add_library_to_docs(tfc::ipc)
