--- a/cockpit/IPC/tsconfig.json
+++ b/cockpit/IPC/tsconfig.json
@@ -22,8 +22,12 @@
     "baseUrl": ".",
     "rootDir": ".",
     "paths": {
-      "@app/*": ["src/app/*"],
-      "@assets/*": ["node_modules/@patternfly/react-core/dist/styles/assets/*"]
+      "@app/*": [
+        "src/app/*"
+      ],
+      "@assets/*": [
+        "node_modules/@patternfly/react-core/dist/styles/assets/*"
+      ]
     },
   },
   "include": [
