--- a/cockpit/IPC/CMakeLists.txt
+++ b/cockpit/IPC/CMakeLists.txt
@@ -6,7 +6,7 @@ add_custom_command(
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/build
    COMMAND npm install --no-package-lock
    COMMAND GENERATE_SOURCEMAP=false BUILD_PATH='./build' ${CMAKE_CURRENT_SOURCE_DIR}/node_modules/react-scripts/bin/react-scripts.js build
-   COMMAND rm -rf ${CMAKE_CURRENT_SOURCE_DIR}/node_modules
+   #COMMAND rm -rf ${CMAKE_CURRENT_SOURCE_DIR}/node_modules
    COMMAND rm -rf ${CMAKE_CURRENT_BINARY_DIR}/build
    COMMAND mv ${CMAKE_CURRENT_SOURCE_DIR}/build ${CMAKE_CURRENT_BINARY_DIR}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
@@ -15,6 +15,7 @@ add_custom_command(
 add_custom_target(cockpit-IPC-build ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/build)
 
 include(GNUInstallDirs)
+
 install(
   DIRECTORY
     ${CMAKE_CURRENT_BINARY_DIR}/build
