--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(tfc-framework
   LANGUAGES
     CXX
 )
-enable_testing()
+include(CTest)
 
 # Add the cmake folder so the FindSphinx module is found
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake" "${CMAKE_CURRENT_LIST_DIR}/cmake/findModules")
@@ -18,9 +18,12 @@ include(tfc_options)
 include(tfc_config)
 include(tfc_warnings)
 include(tfc_docs)
-include(tfc_install)
+include(tfc_cpack)
 
+if (BUILD_EXES)
 add_subdirectory(exes)
+endif()
+
 add_subdirectory(libs)
 
 if (BUILD_DOCS)
