--- a/libs/dbus_util/CMakeLists.txt
+++ b/libs/dbus_util/CMakeLists.txt
@@ -6,9 +6,7 @@ add_library(tfc::dbus_util ALIAS dbus_util)
 target_include_directories(dbus_util
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
-    $<INSTALL_INTERFACE:inc/public>
-  PRIVATE
-    inc
+    $<INSTALL_INTERFACE:include>
 )
 
 find_package(unofficial-sdbusplus CONFIG REQUIRED)
@@ -24,4 +22,9 @@ target_link_libraries(dbus_util
 
 add_library_to_docs(tfc::dbus_util)
 
-add_subdirectory(tests)
+if (BUILD_TESTING)
+  add_subdirectory(tests)
+endif ()
+
+include(tfc_install)
+tfc_install_lib(dbus_util)
