--- a/libs/ec/CMakeLists.txt
+++ b/libs/ec/CMakeLists.txt
@@ -12,7 +12,7 @@ add_library(tfc::ec ALIAS ec)
 target_include_directories(ec
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
-    $<INSTALL_INTERFACE:inc/public>
+    $<INSTALL_INTERFACE:include>
     ${BEXT_SML_INCLUDE_DIRS}
   PRIVATE
     inc/
@@ -28,4 +28,6 @@ target_link_libraries(ec
 
 add_library_to_docs(tfc::ec)
 
-add_subdirectory(tests)
+if (BUILD_TESTING)
+  add_subdirectory(tests)
+endif ()
