--- a/libs/ec/tests/examples/CMakeLists.txt
+++ b/libs/ec/tests/examples/CMakeLists.txt
@@ -1,2 +1,4 @@
 tfc_add_example_no_test(ec_example_run_context ec_example_run_context.cpp)
-target_link_libraries(ec_example_run_context tfc::ec)
+
+find_package(Boost REQUIRED COMPONENTS program_options)
+target_link_libraries(ec_example_run_context tfc::ec Boost::program_options)
