add from example

--- a/exes/tui/CMakeLists.txt
+++ b/exes/tui/CMakeLists.txt
@@ -1,12 +1,14 @@
 add_executable(tfctui tui.cpp)
 
 find_package(Boost REQUIRED COMPONENTS program_options)
+find_package(ftxui CONFIG REQUIRED)
 
 target_link_libraries(tfctui
   PUBLIC
     tfc::ipc
     tfc::base
     tfc::logger
+    ftxui::dom ftxui::screen ftxui::component
     Boost::program_options
 )
 
