--- a/libs/confman/testing/stubs/CMakeLists.txt
+++ b/libs/confman/testing/stubs/CMakeLists.txt
@@ -5,12 +5,13 @@ add_library(tfc::stubs::confman ALIAS confman_stubs)
 target_include_directories(confman_stubs
   INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
-    $<INSTALL_INTERFACE:inc/public>
+    $<INSTALL_INTERFACE:include>
 )
 
 target_link_libraries(confman_stubs
   INTERFACE
-    tfc::confman # would prefer not to depend on this
+    tfc::confman
 )
 
 add_library_to_docs(tfc::stubs::confman)
+add_subdirectory(example)
