mocks for confman

--- a/libs/confman/testing/stubs/example/CMakeLists.txt
+++ b/libs/confman/testing/stubs/example/CMakeLists.txt
@@ -3,5 +3,5 @@ add_executable(confman_stubs_example main.cpp)
 
 target_link_libraries(confman_stubs_example
   PUBLIC
-    tfc::stubs::confman
+    tfc::stub_confman
 )
