--- a/libs/confman/testing/mocks/CMakeLists.txt
+++ b/libs/confman/testing/mocks/CMakeLists.txt
@@ -1,27 +1,23 @@
 
-add_library(confman_mocks INTERFACE)
-add_library(tfc::mocks::confman ALIAS confman_mocks)
+add_library(mock_confman INTERFACE)
+add_library(tfc::mock_confman ALIAS mock_confman)
 
-target_include_directories(confman_mocks
+target_include_directories(mock_confman
   INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
-    $<INSTALL_INTERFACE:inc/public>
+    $<INSTALL_INTERFACE:include>
 )
 
 find_package(GTest CONFIG REQUIRED COMPONENTS gmock)
-target_link_libraries(confman_mocks
+target_link_libraries(mock_confman
   INTERFACE
     tfc::confman
     GTest::gmock
 )
 
-add_library_to_docs(tfc::mocks::confman)
+add_library_to_docs(tfc::mock_confman)
 
-#add_executable(testme test.cpp)
-#
-#find_package(ut CONFIG REQUIRED)
-#target_link_libraries(testme
-#  PUBLIC
-#    tfc::mocks::confman
-#    Boost::ut
-#)
+include(tfc_install)
+tfc_install_lib(mock_confman)
+
+add_subdirectory(example)
