--- a/libs/confman/testing/stubs/CMakeLists.txt
+++ b/libs/confman/testing/stubs/CMakeLists.txt
@@ -1,17 +1,21 @@
 
-add_library(confman_stubs INTERFACE)
-add_library(tfc::stubs::confman ALIAS confman_stubs)
+add_library(stub_confman INTERFACE)
+add_library(tfc::stub_confman ALIAS stub_confman)
 
-target_include_directories(confman_stubs
+target_include_directories(stub_confman
   INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/inc/public>
     $<INSTALL_INTERFACE:include>
 )
 
-target_link_libraries(confman_stubs
+target_link_libraries(stub_confman
   INTERFACE
     tfc::confman
 )
 
-add_library_to_docs(tfc::stubs::confman)
+include(tfc_install)
+tfc_install_lib(stub_confman)
+
+add_library_to_docs(tfc::stub_confman)
+
 add_subdirectory(example)
