--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,18 +1,10 @@
 name: Static analysis
 
 on:
-  # Will run on push when merging to 'branches'. The output will be shown in the console
   push:
-    branches:
-      - develop
-      - master
-      - main
-
-  # 'pull_request_target' allows this Action to also run on forked repositories
-  # The output will be shown in PR comments (unless the 'force_console_print' flag is used)
-  pull_request_target:
-    branches:
-      - "*"
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   static_analysis:
