--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -13,19 +13,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install libsystemd-dev cppcheck lsb-release wget software-properties-common gnupg g++-12 curl ninja-build autoconf-archive libtool autoconf meson gperf autopoint
-          curl https://apt.llvm.org/llvm.sh -o llvm.sh
-          chmod +x llvm.sh
-          sudo ./llvm.sh 16 all
-
       - name: Run static analysis
         uses: JacobDomagala/StaticAnalysis@master
         with:
           use_cmake: true
           cmake_args: --preset ci-clang-debug
+
+          apt_pckgs: cppcheck lsb-release wget software-properties-common gnupg g++-12 curl ninja-build autoconf-archive libtool autoconf meson gperf autopoint
+
+          init_script: |
+            curl https://apt.llvm.org/llvm.sh -o llvm.sh
+            chmod +x llvm.sh
+            sudo ./llvm.sh 16 all
 
           # (Optional) clang-tidy args
           clang_tidy_args: -checks='*,fuchsia-*,google-*,zircon-*,abseil-*,modernize-use-trailing-return-type'
