copy code from https://github.com/ArthurSonzogni/json-tui

--- a/exes/tui/CMakeLists.txt
+++ b/exes/tui/CMakeLists.txt
@@ -3,6 +3,11 @@ add_executable(tfctui tui.cpp)
 find_package(Boost REQUIRED COMPONENTS program_options)
 find_package(ftxui CONFIG REQUIRED)
 
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/version.hpp.in
+  ${CMAKE_CURRENT_BINARY_DIR}/src/version.hpp
+)
+
 target_link_libraries(tfctui
   PUBLIC
     tfc::ipc
