move around code

--- a/exes/tui/CMakeLists.txt
+++ b/exes/tui/CMakeLists.txt
@@ -1,11 +1,18 @@
-add_executable(tfctui tui.cpp)
+add_executable(tfctui
+  src/button.cpp
+  src/expander.cpp
+  src/keybinding.cpp
+  src/main.cpp
+  src/main_ui.cpp
+  src/mytoggle.cpp
+)
 
 find_package(Boost REQUIRED COMPONENTS program_options)
 find_package(ftxui CONFIG REQUIRED)
 
 configure_file(
-  ${CMAKE_CURRENT_SOURCE_DIR}/src/version.hpp.in
-  ${CMAKE_CURRENT_BINARY_DIR}/src/version.hpp
+  ${CMAKE_CURRENT_LIST_DIR}/version.hpp.in
+  ${CMAKE_CURRENT_BINARY_DIR}/inc/version.hpp
 )
 
 target_link_libraries(tfctui
@@ -15,6 +22,11 @@ target_link_libraries(tfctui
     tfc::logger
     ftxui::dom ftxui::screen ftxui::component
     Boost::program_options
+)
+
+target_include_directories(tfctui
+  PUBLIC
+    inc
 )
 
 include(GNUInstallDirs)
