--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+env:
+  VCPKG_BINARY_SOURCES: clear;x-gha,readwrite
 
 jobs:
   static_analysis:
