--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -19,6 +19,8 @@ jobs:
         shell: bash
         run: |
           echo "#!/bin/bash
+          
+          VCPKG_BINARY_SOURCES="clear;x-gha,readwrite"
 
           # Input args provided by StaticAnalysis action
           root_dir=\${1}
